config-root/namespaces/jx-production/aspjxproject/aspjxproject-aspjxproject-deploy.yaml
# Source: aspjxproject/templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: aspjxproject-aspjxproject
  labels:
    draft: draft-app
    chart: "aspjxproject-0.0.1"
    gitops.jenkins-x.io/pipeline: 'namespaces'
  annotations:
    meta.helm.sh/release-name: 'aspjxproject'
    wave.pusher.com/update-on-config-change: 'true'
  namespace: jx-production
spec:
  selector:
    matchLabels:
      app: aspjxproject-aspjxproject
  replicas: 1
  template:
    metadata:
      labels:
        draft: draft-app
        app: aspjxproject-aspjxproject
    spec:
      serviceAccountName: aspjxproject-aspjxproject
      containers:
      - name: aspjxproject
        image: "gcr.io/jenkinsxdemo-371022/aspjxproject:0.0.1"
        imagePullPolicy: IfNotPresent
        envFrom: null
        ports:
        - name: http
          containerPort: 80
        livenessProbe:
          httpGet:
            path: /
            port: 80
          initialDelaySeconds: 60
          periodSeconds: 10
          successThreshold: 1
          timeoutSeconds: 1
        readinessProbe:
          httpGet:
            path: /
            port: 80
          periodSeconds: 10
          successThreshold: 1
          timeoutSeconds: 1
        resources:
          limits:
            cpu: 400m
            memory: 256Mi
          requests:
            cpu: 200m
            memory: 128Mi
      terminationGracePeriodSeconds:
      imagePullSecrets:
